<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.calculadora.paco.calculadora.Calculadora">



    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:text="@string/showingvalues"
        android:ems="10"
        android:layout_toRightOf="@+id/btn_"
        android:layout_marginBottom="10dp"
        android:id="@+id/showingvalues" />


    <Button
        android:text="@string/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/showingvalues"
        android:layout_toEndOf="@+id/showingvalues"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:id="@+id/btn_clear"
        android:textColor="?android:attr/textColorHint" />


    <Button
        android:text="@string/btn_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_zero"
        android:layout_alignBaseline="@+id/btn_decimal"
        android:layout_alignBottom="@+id/btn_decimal"
        android:layout_toRightOf="@+id/btn_one"
        android:layout_toEndOf="@+id/btn_one"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_one"
        android:layout_below="@+id/btn_four"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/background_light" />


    <Button
        android:text="@string/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_two"
        android:layout_alignBaseline="@+id/btn_one"
        android:layout_alignBottom="@+id/btn_one"
        android:layout_toRightOf="@+id/btn_one"
        android:layout_toEndOf="@+id/btn_one"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_six"
        android:layout_toRightOf="@+id/btn_five"
        android:layout_toEndOf="@+id/btn_five"
        android:id="@+id/btn_three"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_seven"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_four"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_eight"
        android:layout_toRightOf="@+id/btn_seven"
        android:layout_toEndOf="@+id/btn_seven"
        android:id="@+id/btn_five"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_nine"
        android:layout_toRightOf="@+id/btn_five"
        android:layout_toEndOf="@+id/btn_five"
        android:id="@+id/btn_six"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_seven"
        android:layout_below="@+id/btn_clear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@android:color/background_light"
        tools:background="@android:color/background_light"
        android:background="@android:color/background_light" />


    <Button
        android:text="@string/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_seven"
        android:layout_toRightOf="@+id/btn_seven"
        android:layout_toEndOf="@+id/btn_seven"
        android:id="@+id/btn_eight"
        tools:background="@android:color/background_light"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_eight"
        android:layout_toRightOf="@+id/btn_eight"
        android:layout_toEndOf="@+id/btn_eight"
        android:id="@+id/btn_nine"
        tools:background="@android:color/background_light"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_nine"
        android:layout_toRightOf="@+id/btn_nine"
        android:layout_toEndOf="@+id/btn_nine"
        android:id="@+id/btn_divide" />

    <Button
        android:text="@string/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_divide"
        android:layout_toRightOf="@+id/btn_nine"
        android:layout_toEndOf="@+id/btn_nine"
        android:id="@+id/btn_multiply" />

    <Button
        android:text="@string/btn_decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_one"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_decimal"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_substract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_six"
        android:layout_toRightOf="@+id/btn_three"
        android:layout_toEndOf="@+id/btn_three"
        android:id="@+id/btn_substract" />

    <Button
        android:text="@string/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_substract"
        android:layout_toRightOf="@+id/btn_equals"
        android:layout_toEndOf="@+id/btn_equals"
        android:id="@+id/btn_add" />


    <Button
        android:text="@string/btn_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_three"
        android:layout_toRightOf="@+id/btn_zero"
        android:layout_toEndOf="@+id/btn_zero"
        android:id="@+id/btn_equals" />




</RelativeLayout>
